add code coverage for lake rule tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,21 +1,34 @@
-NODE_BIN := $(shell npm bin)
-
 TESTS := \
-	coverage-test
+	coverage
 
 TEST_TARGETS := $(TESTS:%=report/%.xml)
 
-DEPS := rule-test-helper.coffee
-
 ruletest: $(TEST_TARGETS)
 
-report:
+report/%.xml: ../make/%.coffee %-test.coffee instrumented | report coverage
+	coffee -o instrumented/test -c $*-test.coffee
+	PREFIX=report REPORT_FILE=$*.xml node instrumented/test/mocha-runner.js instrumented/test/$*-test.js
+
+report instrumented/make instrumented/test uninstrumented coverage:
 	mkdir -p $@
 
-report/%.xml: %.coffee $(DEPS) | report
-	PREFIX=report REPORT_FILE=$*.xml $(NODE_BIN)/mocha -R sternchen --compilers coffee:coffee-script,coffee-trc:coffee-errors $<
+instrumented/test/%.js: %.coffee | instrumented/test
+	coffee -o $(@D) -c $<
+
+instrumented/helper: ../helper/*.coffee
+	mkdir -p instrumented/helper
+	coffee -o instrumented/helper -c ../helper
+	touch $@
+
+instrumented: instrumented/helper instrumented/test/mocha-runner.js instrumented/test/rule-test-helper.js | instrumented/make uninstrumented
+	coffee -o uninstrumented -c ../make
+	istanbul instrument --no-compact --output instrumented/make uninstrumented
+	touch instrumented
 
 clean:
 	rm -rf report
+	rm -rf instrumented
+	rm -rf uninstrumented
+	rm -rf coverage
 
 .PHONY: ruletest clean
