Add target to run all tests in one mocha instance

--- a/test/Makefile
+++ b/test/Makefile
@@ -23,10 +23,13 @@ ifdef DEBUG
 	DEBUG_BRK := --debug-brk
 endif
 
-ruletest: $(TESTS)
+all: test
 
 $(TESTS): node_modules | report
 	@PREFIX=report REPORT_FILE=$@.xml $(NODE_MODULES)/mocha $(DEBUG_BRK) -R $(REPORTER) --compilers coffee:coffee-script,coffee-trc:coffee-errors $@-test.coffee
+
+test: node_modules | report
+	@PREFIX=report REPORT_FILE=report.xml $(NODE_MODULES)/mocha $(DEBUG_BRK) -R $(REPORTER) --compilers coffee:coffee-script,coffee-trc:coffee-errors $(TESTS:%=%-test.coffee)
 
 watch:
 	$(NODE_MODULES)/mocha --watch -R min --compilers coffee:coffee-script,coffee-trc:coffee-errors $(TESTS:%=%-test.coffee)
