--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "url": "http://github.com/actano/lake-rules"
   },
   "devDependencies": {
-      "coffee-script": "1.7.1",
-      "coffee-errors": "0.8.6",
-      "mocha": "1.18.2",
-      "chai": "1.9.1",
-      "sinon": "1.9.1",
-      "underscore": "1.6.0",
-      "sternchen": "https://github.com/actano/sternchen_reporter/tarball/v0.0.10",
-      "proxyquire": "0.6.0",
-      "debug": "0.8.1"
+    "coffee-script": "1.7.1",
+    "coffee-errors": "0.8.6",
+    "mocha": "1.18.2",
+    "chai": "1.9.1",
+    "sinon": "1.9.1",
+    "underscore": "1.6.0",
+    "sternchen": "https://github.com/actano/sternchen_reporter/tarball/v0.0.10",
+    "proxyquire": "0.6.0",
+    "debug": "0.8.1"
+  },
+  "dependencies": {
+    "mkdirp": "^0.5.0"
   }
 }
