--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "^2.7.1",
     "component-builder": "^1.2.1",
     "component-consoler": "^2.0.0",
+    "component-resolver": "^1.3.0",
     "jade": "^1.9.2",
     "mkdirp": "^0.5.0",
     "nopt": "^3.0.1"
