--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "url": "http://github.com/actano/lake-rules"
   },
   "devDependencies": {
-    "coffee-script": "1.7.1",
     "coffee-errors": "0.8.6",
     "mocha": "1.18.2",
     "chai": "1.9.1",
@@ -17,15 +16,18 @@
     "debug": "0.8.1"
   },
   "dependencies": {
+    "bluebird": "^2.9.25",
     "builder-autoprefixer": "^1.0.4",
     "builder-coffee-script": "^0.2.0",
     "builder-es6-module-to-cjs": "^1.1.0",
-    "commander": "^2.7.1",
+    "coffee-script": "^1.9.2",
+    "commander": "^2.8.1",
     "component-builder": "^1.2.1",
     "component-consoler": "^2.0.0",
     "component-resolver": "^1.3.0",
-    "jade": "^1.9.2",
+    "jade": "^1.9.1",
     "mkdirp": "^0.5.0",
-    "nopt": "^3.0.1"
+    "nopt": "^3.0.1",
+    "uglify-js": "^2.4.16"
   }
 }
