--- a/package.json
+++ b/package.json
@@ -27,6 +27,15 @@
     "component-consoler": "^2.0.0",
     "component-resolver": "^1.3.0",
     "jade": "^1.9.1",
+    "karma": "^0.12.31",
+    "karma-chai-plugins": "^0.2.4",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coffee-preprocessor": "^0.2.1",
+    "karma-inject-html": "0.0.1",
+    "karma-jenkins-reporter": "0.0.2",
+    "karma-jquery": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-sinon-chai": "^0.3.0",
     "mkdirp": "^0.5.0",
     "nopt": "^3.0.1",
     "phantomjs": "^1.9.15",
