--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-sinon-chai": "^0.3.0",
     "mkdirp": "^0.5.0",
     "nopt": "^3.0.2",
+    "stylus": "^0.50.0",
     "uglify-js": "^2.4.23",
     "xmlbuilder": "^2.6.2"
   }
