--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mocha": "^2.2.5",
     "proxyquire": "^1.5.0",
     "sinon": "^1.14.1",
+    "sinon-chai": "^2.8.0",
     "sternchen": "^0.4.2",
     "underscore": "^1.8.3"
   },
