add npm test script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "lake-rules",
   "version": "2.4.1",
+  "scripts": {
+    "test": "make clean test"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/actano/lake-rules"
