--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-jquery": "^0.1.0",
     "karma-mocha": "^0.1.10",
     "karma-sinon-chai": "^0.3.0",
+    "marked": "^0.3.3",
     "mkdirp": "^0.5.0",
     "nopt": "^3.0.2",
     "stylus": "^0.50.0",
