--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "builder-autoprefixer": "^1.0.4",
     "builder-coffee-script": "^0.2.0",
     "builder-es6-module-to-cjs": "^1.1.0",
-    "coffee-script": "^1.9.2",
     "commander": "^2.8.1",
     "component-builder": "^1.2.1",
     "component-consoler": "^2.0.0",
     "component-resolver": "^1.3.0",
+    "marked": "^0.3.3",
+    "mkdirp": "^0.5.0",
+    "nopt": "^3.0.2",
+    "uglify-js": "^2.4.23",
+    "xmlbuilder": "^2.6.2"
+  },
+  "peerDependencies": {
+    "coffee-script": "^1.9.2",
     "jade": "^1.9.2",
     "karma": "^0.12.31",
     "karma-chai-plugins": "^0.5.0",
@@ -35,11 +42,6 @@
     "karma-jquery": "^0.1.0",
     "karma-mocha": "^0.1.10",
     "karma-sinon-chai": "^0.3.0",
-    "marked": "^0.3.3",
-    "mkdirp": "^0.5.0",
-    "nopt": "^3.0.2",
-    "stylus": "^0.50.0",
-    "uglify-js": "^2.4.23",
-    "xmlbuilder": "^2.6.2"
+    "stylus": "^0.50.0"
   }
 }
