--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "xmlbuilder": "^2.6.2"
   },
   "peerDependencies": {
-    "coffee-script": "^1.9.2",
-    "jade": "^1.9.2",
-    "karma": "^0.12.31",
-    "karma-chai-plugins": "^0.5.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-jquery": "^0.1.0",
-    "karma-mocha": "^0.1.10",
-    "karma-sinon-chai": "^0.3.0",
-    "stylus": "^0.50.0"
+    "coffee-script": ">= 1.9.2 < 2",
+    "jade": ">= 1.9.2 < 2",
+    "karma": ">= 0.12.31 < 0.13",
+    "karma-chai-plugins": ">= 0.5 < 0.6",
+    "karma-chrome-launcher": ">= 0.1.7 < 0.2",
+    "karma-jquery": ">= 0.1 < 0.2",
+    "karma-mocha": ">= 0.1.10 < 0.2",
+    "karma-sinon-chai": ">= 0.3 < 0.4",
+    "stylus": ">= 0.50 < 0.51"
   }
 }
