--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma": ">= 0.12.31 < 0.13",
     "karma-chai-plugins": ">= 0.5 < 0.6",
     "karma-chrome-launcher": ">= 0.1.7 < 0.2",
+    "karma-firefox-launcher": ">= 0.1.6 < 0.2",
     "karma-jquery": ">= 0.1 < 0.2",
     "karma-mocha": ">= 0.1.10 < 0.2",
     "karma-sinon-chai": ">= 0.3 < 0.4",
