--- a/package.json
+++ b/package.json
@@ -15,36 +15,26 @@
     "proxyquire": "^1.5.0",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.8.0",
-    "sternchen": "^0.4.2",
-    "underscore": "^1.8.3"
+    "sternchen": "^0.4.2"
   },
   "dependencies": {
     "bluebird": "^2.9.25",
-    "builder-autoprefixer": "^1.0.4",
-    "builder-coffee-script": "^0.2.0",
-    "builder-es6-module-to-cjs": "^1.1.0",
     "commander": "^2.8.1",
-    "component-builder": "^1.2.1",
-    "component-consoler": "^2.0.0",
-    "component-resolver": "^1.3.0",
     "marked": "^0.3.3",
     "mkdirp": "^0.5.0",
     "nopt": "^3.0.2",
-    "uglify-js": "^2.4.23",
     "xmlbuilder": "^2.6.2"
   },
   "peerDependencies": {
     "coffee-script": ">= 1.9.2 < 2",
-    "jade": ">= 1.11 < 2",
     "karma": ">= 0.12.31 < 0.13",
     "karma-chai-plugins": ">= 0.5 < 0.6",
-    "karma-chrome-launcher": ">= 0.1.7 < 0.2",
-    "karma-firefox-launcher": ">= 0.1.6 < 0.2",
     "karma-mocha": ">= 0.1.10 < 0.2",
     "karma-sinon-chai": ">= 0.3 < 0.4",
     "karma-webpack": "*",
-    "node-libs-browser": "*",
-    "stylus": "*",
     "webpack": "*"
+  },
+  "optionalDependencies": {
+    "jade": ">= 1.11 < 2"
   }
 }
