--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "peerDependencies": {
     "coffee-script": ">= 1.9.2 < 2",
-    "karma": ">= 0.12.31 < 0.13",
+    "karma": ">= 0.12.31",
     "karma-chai-plugins": ">= 0.5 < 0.6",
     "karma-mocha": ">= 0.1.10 < 0.2",
     "karma-sinon-chai": ">= 0.3 < 0.4",
